# speed-card-ws

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: game_session.rs  main.rs  player_action.rs  server_message.rs
src/game_logic/: card.rs  mod.rs  player.rs  playerview.rs  rank.rs  side.rs  speedtable.rs  suit.rs
src/game_logic/piles/: mod.rs  player_hands.rs  player_indexed.rs  side_indexed.rs
